# Rust-FVM-Heat-Conduction

./: CITATION.cff  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: method.md
results/: residuals.csv  summary.txt  temperature.csv
src/: main.rs
